syntax = "proto3";

enum TargetCountryCode {
    US = 0;  // United States
    JP = 1;  // Japan
    DE = 2;  // Germany
    GB = 3;  // United Kingdom
    FR = 4;  // France
    IN = 5;  // India
    BR = 6;  // Brazil
    RU = 7;  // Russia
    IT = 8;  // Italy
    CA = 9;  // Canada
    KR = 10; // South Korea
    AU = 11; // Australia
    ES = 12; // Spain
    MX = 13; // Mexico
    NL = 14; // Netherlands
    CH = 15; // Switzerland
    TR = 16; // TÃ¼rkiye
    SA = 17; // Saudi Arabia
    SE = 18; // Sweden
    ID = 19; // Indonesia
    BE = 20; // Belgium
    AR = 21; // Argentina
    ZA = 22; // South Africa
    PL = 23; // Poland
    AT = 24; // Austria
    SG = 25; // Singapore
    UA = 26; // Ukraine
    TW = 27; // Taiwan
    NO = 28; // Norway
    IL = 29; // Israel
    MY = 30; // Malaysia
    VN = 31; // Vietnam
    HK = 32; // Hong Kong
    TH = 33; // Thailand
    DK = 34; // Denmark
    CL = 35; // Chile
    PH = 36; // Philippines
    CZ = 37; // Czechia
    FI = 38; // Finland
    GR = 39; // Greece
    PT = 40; // Portugal
    IE = 41; // Ireland
    CO = 42; // Colombia
    RO = 43; // Romania
    NZ = 44; // New Zealand
    HU = 45; // Hungary
    PE = 46; // Peru
    KE = 47; // Kenya
    NG = 48; // Nigeria
}